cabal-version: 3.0

name: helloWorld
version: 1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author: Ayush garg
maintainer: ayush.garg@juspay.in

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

-- Library section (if applicable)
library
  hs-source-dirs:
      src
  exposed-modules:
      DbConnection
      RunSqlQuery
      Tyes.Customer
      Rest.RestApi
      Monad.CustomMonad
      Rest.ServentApi
  default-language: Haskell2010
  -- Add your dependencies here
  build-depends:
      base >= 4.14 && < 5,
    --   beam-mysql,
    --   mysql-simple >= 0.4 && < 1,
      bytestring,
      text,
      io-streams,
      time,
      mtl,
      aeson,
      network,
      warp,
      postgresql-simple >= 0.5 && < 0.7,
      scotty,
      servant,
      servant-server,
      katip,
      mysql-haskell
    --   hashable >= 1.1 && < 1.5,
    --   beam-core >= 0.8 && < 0.11,
    --   aeson >= 1.0 && < 1.5,
    --   th-abstraction >= 0.3 && < 0.6,
    --   template-haskell >= 2.18 && < 2.23

-- Executable section
executable helloWorld
    main-is:          Main.hs
    hs-source-dirs:   app
    
    -- Add your dependencies here
    build-depends:    
        base >= 4.14 && < 5,
        -- hashable >= 1.1 && < 1.5,
        -- beam-mysql >= 1.2.1.1,
        postgresql-simple >= 0.5 && < 0.7,
        helloWorld,
        scotty,
        mysql-haskell
    default-language: Haskell2010